# myCgi

./: .gitignore  CMakeLists.txt  ChangeLog  Chunk.cpp  Chunk.h  INSTALL  Obj.cpp  Obj.h  ObjGlob.cpp  Page.cpp  Page.h  QMLTree.cpp  README.md  Router.cpp  Router.h  RouterCss.cpp  RouterCss.h  RouterJs.cpp  RouterJs.h  RouterListen.cpp  RouterListen.h  RouterPost.cpp  RouterPost.h  Router_ParseRequest.cpp  Router_qml.cpp  Service.cpp  Service.h  config.h.in  main.cpp  myCgi2.pc.in  myCgi2.service  myCgi2.service.in  nginx-test.conf  root.qml  root.qml.in  root2.qml  root3.qml
FCGIRequest/: CMakeLists.txt
MyCgi2RouteTest/: CMakeLists.txt  MyCgi2RouteTest.pro  mycgi2routetest.cpp  mycgi2routetest.h  mycgi2routetest_plugin.cpp  mycgi2routetest_plugin.h  qmldir  qmldir.in
MyCgi2RouteTest/qmakeBuild/: Makefile  moc_mycgi2routetest.cpp  moc_mycgi2routetest_plugin.cpp
Routers/ClassicHTML/: CMakeLists.txt  ClassicHTMLRouter.cpp  ClassicHTMLRouter.h  qmldir
Routers/ClassicHTML/Router/: CMakeLists.txt  Chunk.cpp  Chunk.h  FCGIRequest.cpp  FCGIRequest.h  Obj.cpp  Obj.h  ObjGlob.cpp  ObjGlob.h  Page.cpp  Page.h  QMLTree.h  Request.cpp  Router.cpp  Router.h  RouterPlugin.cpp  Router_ParseRequest.cpp  Script.cpp  Script.h  utils.h
Routers/ClassicHTML/RouterCSS/: CMakeLists.txt  RouterCSS.cpp  RouterCSS.h  RouterCSSPlugin.cpp  RouterCSSPlugin.h
Routers/ClassicHTML/RouterJS/: CMakeLists.txt  RouterJS.cpp  RouterJS.h  RouterJSPlugin.cpp  RouterJSPlugin.h
Routers/ClassicHTML/RouterPost/: CMakeLists.txt  RouterPost.cpp  RouterPost.h
Routers/DefaultRouter2/: CMakeLists.txt  DefaultRouter.cpp  DefaultRouter.h  RouterChunk.cpp  RouterChunk.h  RouterHTML.cpp  RouterHTML.h  RouterJS.h  RouterMySass.cpp  RouterMySass.h  RouterPost.cpp  RouterPost.h
Routers/RouterChunk/: CMakeLists.txt  RouterChunk.cpp  RouterChunk.h  qmldir.in
Routers/RouterMySass/: CMakeLists.txt  LibRouterMySass.cpp  LibRouterMySass.h  MySass.cpp  MySass.h  SS.cpp  SS.h
Routers/RouterMySass/RouterMySass/: CMakeCache.txt  Makefile  cmake_install.cmake  qmldir
Routers/RouterMySass/RouterMySass/RouterMySass_autogen/: moc_predefs.h  mocs_compilation.cpp
Routers/RouterMySass/RouterMySass/RouterMySass_autogen/EWIEGA46WW/: moc_RouterMySass.cpp
Service/: CMakeLists.txt  Chunk.cpp  Chunk.h  DefaultPage.cpp  DefaultPage.h  FCGIRequest.cpp  FCGIRequest.h  ObjGlob.cpp  ObjGlob.h  Page.cpp  Page.h  QMLTree.cpp  Request.cpp  Request.h  Router.cpp  Router.h  RouterCSS.cpp  RouterCSS.h  RouterJS.cpp  RouterJS.h  RouterListen.cpp  RouterListen.h  RouterListen_run.cpp  Router_ParseRequest.cpp  Script.cpp  Script.h  Service.cpp  Service.h
html/: index.unix  index1.html  menu.qj  put.unix
html/chunks/: chunk1.chunk  chunk2.chunk
test/: README.md
test/InsertCmd/: CMakeLists.txt  InsertCmd.cpp  InsertCmd.h  main.cpp
test/Q_INVOKABLE/: CMakeLists.txt  Test.cpp  Test.h  main.cpp
test/myCgi2Threads/: CMakeLists.txt  main.0.cpp  main.1.cpp  main.2.cpp  main.4.cpp  main.5.cpp  main.6.cpp  main.7.cpp  main.8.cpp  main.9.cpp  main.cpp
web/chunks/: footer.chunk  menuLoad.chunk
web/chunks/html/: index.html  install.html  test.html
web/css/: style.css
web/html/: hw.html  index.html  install.html  root3.html  test.html  url.html
web/json/: 1.json
web/sass/: 1.sass
web/scripts/: menu.0.qj  menu.qj
web/t/: 22.txt
